@@ -918,7 +918,7 @@ SC_FEAR	332
 SC_ENCHANTBLADE	350
 SC_DEATHBOUND	351
 SC_NAUTHIZ	352
-SC_REUSE_REFRESH	353
+//SC_REUSE_REFRESH	353	// Shoulden't be removed.
 SC_RAIDO	354
 SC_BERKANA	355
 SC_ISA	356
@@ -930,7 +930,7 @@ SC_HAGALAZ	361
 SC_ROLLINGCUTTER	362
 SC_CLOAKINGEXCEED	363
 SC_WEAPONBLOCKING	364
-SC_WEAPONBLOCKING_POSTDELAY	365
+//SC_WEAPONBLOCKING_POSTDELAY	365	// Shouldn't be removed.
 SC_POISONINGWEAPON	366
 SC_TOXIN	367
 SC_PARALYSE	368
@@ -1015,6 +1015,10 @@ SC_ELECTRICWALK	446
 SC_WARMER	447
 SC_STRIKING	448
 SC_CRYSTALIZE	449
+//SC_REUSE_COMET	450	// Shoulden't be removed.
+SC_VENOMIMPRESS	451
+SC_HALLUCINATIONWALK	452
+//SC_HALLUCINATIONWALK_POSTDELAY	453	// Shoulden't be removed.
 
 e_gasp	0
 e_what	1
