@@ -1459,7 +1459,7 @@ packet_ver: 25
 //0x0806,4
 //0x0807,2
 //0x0808,4
-//0x0809,14
+0x0809,14
 //0x080a,50
 //0x080b,18
 //0x080c,6
