@@ -1170,8 +1170,12 @@
 //==========================================
 
 //===== Gillotine Cross ====================
+//-- GC_VENOMIMPRESS
+2021,0,500,0,0,10000:20000:30000:40000:50000,0
 //-- GC_CROSSIMPACT
 2022,0,500,0,2000,0,0
+//-- GC_ANTIDOTE
+2026,0,0,0,0,0,0
 //-- GC_POISONINGWEAPON
 2027,0,1000,0,0,60000:120000:180000:240000:300000,300000:300000:300000:300000:0:15000:300000:300000:300000:0
 //-- GC_WEAPONBLOCKING
@@ -1180,8 +1184,12 @@
 2029,0,2000,0,0,0,0
 //-- GC_WEAPONCRUSH
 2030,0,1000,0,0,40000:80000:120000:160000:200000,0
+//-- GC_VENOMPRESSURE
+2031,0,0,1000,0,0,0
 //-- GC_CLOAKINGEXCEED
 2033,0,2500,0,0,0,0
+//-- GC_HALLUCINATIONWALK
+2035,0,0,300000,0,30000,300000
 //-- GC_ROLLINGCUTTER
 2036,0,100,0,0,3000,0
 //-- GC_CROSSRIPPERSLASHER
